Fix background on small screen

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -123,7 +123,7 @@
     .about_me {
         flex-direction: column;
         align-items: center;
-        background-position: 0px 200px;
+        background-position: 0px 210px;
         background-size: 50%;
       }
       
